// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinishedCreatePolicy expect to render finished error state 1`] = `
<Bullseye>
  <EmptyState
    variant="full"
  >
    <EmptyStateIcon
      icon={[Function]}
    />
    <br />
    <Title
      headingLevel="h1"
      size="lg"
    >
      Creating policy
    </Title>
    <EmptyStateBody>
      <ProgressBar
        failed={false}
        percent={0}
      />
    </EmptyStateBody>
    <EmptyStateBody
      className={false}
    >
      This usually takes a minute or two.
    </EmptyStateBody>
    <EmtpyStateWithErrors
      error={null}
    />
    <EmptyStateSecondaryActions />
  </EmptyState>
</Bullseye>
`;

exports[`FinishedCreatePolicy expect to render without error 1`] = `
<Bullseye>
  <EmptyState
    variant="full"
  >
    <EmptyStateIcon
      icon={[Function]}
    />
    <br />
    <Title
      headingLevel="h1"
      size="lg"
    >
      Creating policy
    </Title>
    <EmptyStateBody>
      <ProgressBar
        failed={false}
        percent={0}
      />
    </EmptyStateBody>
    <EmptyStateBody
      className={false}
    >
      This usually takes a minute or two.
    </EmptyStateBody>
    <EmptyStateWithErrors
      errors={null}
    />
    <EmptyStateSecondaryActions />
  </EmptyState>
</Bullseye>
`;
